--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-child (voteSize)="(voteCount($event))"></app-child>
 <h1>Total vote from children: {{vote}}</h1>
 <app-name-card [nameCard]="nameCard" [email]="email" [phone]="phone"></app-name-card>
+<app-progress-bar width="65"></app-progress-bar>
